--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -17,38 +17,31 @@ img {
   height: auto;
 }
 
-.card {
-  width: 288px;
-}
-
 .card-text {
   margin-top: 0;
   margin-bottom: 10px;
 }
 
 .card-img-top {
-  display: flex;
-  justify-content: center;
+  max-width: 300px;
 }
-
-// .search-form {
-//   display: inline-flex;
-//   justify-content: center;
-//   align-items: center;
-//   padding: 10px;
-// }
 
 .card {
   margin: 10px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 100vw;
 }
 
-// .btn {
-//   padding: 10px;
-//   background-color: #3f51b5;
-//   color: #fff;
-//   font-weight: 600;
-//   border-radius: 5px;
-// }
+.card-body {
+  margin-right: 30px;
+  font-size: 15px;
+}
+
+.card-title {
+  font-size: 20px;
+}
 
 input[type='text'] {
   padding: 10px;
@@ -56,4 +49,10 @@ input[type='text'] {
   box-sizing: border-box;
   border-radius: 5px;
   width: 288px;
+}
+
+.list-group-item {
+  font-size: 20px;
+  max-width: 500px;
+  padding-left: 15px;
 }
