--- a/src/templates/country-card.hbs
+++ b/src/templates/country-card.hbs
@@ -1,24 +1,21 @@
- 
- 
-<div class="card">
- 
-  <div class="card-img-top">
-   
-    <img src="{{flag}}" alt="{{{name}}}">
-  </div>
-  <div class="card-body">
-    <h2 class="card-title"><b>Country:</b> {{name}}</h2>
-    <p class="card-text"><b>Capital:</b> {{capital}}</p>
-    <p class="card-text"><b>Population:</b> {{population}}</p>
+<h2 class='card-title'><b>Country:</b> {{name}}</h2>
+<div class='card'>
 
-    <p class="card-text"><b>Languages:</b></p>
-    <ul class="list-group"></ul>
-    {{#each languages}}
-      <li class="list-group-item">{{this.name}}</li>
-    {{/each}}
+  <div class='card-body'>
+
+    <p class='card-text'><b>Capital:</b> {{capital}}</p>
+    <p class='card-text'><b>Population:</b> {{population}}</p>
+
+    <p class='card-text'><b>Languages:</b></p>
+    <ul class='list-group'>
+      {{#each languages}}
+        <li class='list-group-item'>{{this.name}}</li>
+      {{/each}}
     </ul>
-     
   </div>
-  
+
+  <div class='card-img-top'>
+    <img src='{{flag}}' alt='{{{name}}}' />
+  </div>
+
 </div>
- 
